# bigbrain

./: .gitignore  Cargo.toml  README.md  shell.nix
bigbrain/: Cargo.toml
bigbrain/src/: lib.rs  mnist.rs  network.rs
bigbrainjs/: Cargo.toml
bigbrainjs/src/: lib.rs
bigbrainjs/web/: main.html  main.js  net.pb
proto/: network.proto
src/: main.rs  maths.rs  mnist.rs  network.rs  types.rs
src/proto/: network.rs
