[package]
name = "neural"
version = "0.1.0"
authors = ["Serge Bazanski <q3k@q3k.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
flate2 = "1"
log = "0.4.0"
env_logger = "0.8.3"
rand = "0.8.3"
rand_distr = "0.4.0"
rayon = "1"
itertools = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.23"
